# Model-Drift

./: .gitignore  README.md  docker-compose.yml  drift_report.html  generate_report.py  main.py  pyproject.toml  requirements.txt
api/: main.py
dashboard/: app.py
drift_detection/: generate_report.py
models/image_classifier/: image_model.py  model_architecture.py
