[project]
name = "model-drift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evidently==0.4.28",
    "fastapi>=0.128.0",
    "mlflow>=3.8.1",
    "pillow>=12.0.0",
    "prometheus-client>=0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-multipart>=0.0.21",
    "qdrant-client>=1.16.2",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.40.0",
]
